# mnemoweaver

./: .gitignore  .mcpbignore  CLAUDE.md  LICENSE  Makefile  install_claude_desktop_mcp.sh  manifest.json  mcp.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: claude.json
src/mnemoweaver/: __init__.py  bm25.py  chunking.py  hippocampus.py  main.py  mem_compressor.py  models.py  protocols.py  storage.py  tokenization.py  utils.py  vector_index.py
